--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://irmoodie.github.io"
+baseURL = "https://irmoodie.com"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "The Personal Website of Iain R. Moodie"
