--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,10 @@ enableRobotsTXT = true
 title = "Iain R Moodie"
 author = "I.R. Moodie"
 description = "Master's student studying Evolutionary Biology."
+uniCurrent = "Uppsala University, Sweden."
 profilePicture = "images/profile.jpg"
+photoCredit = "Declan Caveney"
+photoCrediturl = "https://deccav.com"
 keywords = ""
 favicon = "favicons/"
 customCss = []
