profile pic changed

--- a/config.toml
+++ b/config.toml
@@ -19,8 +19,8 @@ author = "I.R. Moodie"
 description = "Master's student studying Evolutionary Biology."
 uniCurrent = "Uppsala University, Sweden."
 profilePicture = "images/profile.jpg"
-photoCredit = "Declan Caveney"
-photoCrediturl = "https://deccav.com"
+#photoCredit = "Declan Caveney"
+#photoCrediturl = "https://deccav.com"
 keywords = ""
 favicon = "favicons/"
 customCss = []
