--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ enableRobotsTXT = true
 title = "Iain R. Moodie"
 author = "I.R. Moodie"
 description = "Master's student studying Evolutionary Biology."
-uniCurrent = "Uppsala 🇸🇪 | Montpellier 🇫🇷"
+uniCurrent = "Université de Montpellier, France"
 profilePicture = "images/profile.jpg"
 #photoCredit = "Declan Caveney"
 #photoCrediturl = "https://deccav.com"
@@ -45,6 +45,15 @@ icon = "fab fa-github"
 title = "GitHub"
 url = "https://github.com/irmoodie"
 
+[[params.socialIcons]]
+icon = "fab fa-orcid"
+title = "ORCiD"
+url = "https://orcid.org/0000-0003-3416-1198"
+
+[[params.socialIcons]]
+icon = "fab fa-google"
+title = "Google Scholar"
+url = "https://scholar.google.com/citations?user=Z219LMIAAAAJ&hl=en"
 
 ## Menu items
 
